# plane_merge

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  README.md
Inputs/: dslr_images_undistorted_DSC_0634_param.txt  dslr_images_undistorted_DSC_0635_param.txt  imageNamesList.txt
cmake/: FindEigen3.cmake  FindGlog.cmake
config/: classes.txt
scripts/: run_PlaneRect.sh  run_colmap.sh  run_colmap_eth3d copy.sh  run_database.sh  run_midas.sh  run_mseg.sh  run_plane_rcnn.sh  run_plane_rect.sh  run_simple_merge.sh  run_superpixels.sh
scripts/database/: genFromColmap.py
src/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cc  LinkedBlockList.h  confidence.cc  confidence.h  copy.txt  cost.h  csvRead.h  database.cc  database.cpp  database.h  depth.cc  depth.h  energy.h  graph.h  graph_cut.cc  image.cc  image.h  line3D.cpp  logging.cc  logging.h  loransac.h  maxflow.cc  misc.cc  misc.h  mono_depth.cc  mono_depth.h  mseg_segmentation.cc  mseg_segmentation.h  normal.h  numpyRead.txt  option_manager.cc  option_manager.h  planeEstimator.cpp  planeEstimator.h  planeMerge.cpp  plane_estimator.cc  plane_estimator.h  (+17 more)
src/IO/: ImgReader.cpp  ImgReader.h  paramsCam.cpp  paramsCam.h
src/base/: image.cc  image.h  line3D.cpp  line3D.h
src/estimators/: plane_estimator.cc  plane_estimator.h
src/exe/: planeMerge.cpp  simple_merge.cc  simple_merge.h
src/lib/: CMakeLists.txt
src/lib/Graclus/multilevelLib/: mlkkm.c  wkkm.c
src/lib/SLIC-Superpixels/: slic.cpp  slic.h  test_slic.cpp
src/lib/graphcuts/: block.h  graph_cut.cc  graph_cut.h
src/lib/seed/: Tools.cpp
src/optim/: random_sampler.cc  ransac.h  sampler.h
src/reconstruction/: confidence.cc  confidence.h  database.cc  database.h  depth.cc  depth.h  normal.cc  normal.h  option_manager.cc  quality.h  reconstruction.h
src/semantics/: mono_depth.cc  mono_depth.h  mseg_segmentation.cc  mseg_segmentation.h  plane_segmentation.cc  plane_segmentation.h  superpixels.cc  superpixels.h
src/utils/: types.h
